Hello, updated the bot for Thread support. Wohooo!